<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
    tools:context=".Task4SendBird">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_login"
        >

      <LinearLayout
          android:layout_marginTop="60dp"
          android:layout_width="match_parent"
          android:layout_height="50dp"

          >
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/login"
              android:textSize="30sp"
              android:textAlignment="center"
              ></TextView>
      </LinearLayout>



       <LinearLayout

          android:layout_marginTop="60dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/user_id"
               android:textSize="25sp"
               android:textAlignment="center"
               android:id="@+id/edittext_login_user_id"
               ></EditText>


           <EditText
               android:id="@+id/edittext_login_user"
               android:layout_marginTop="60dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/user_name"
               android:textSize="25sp"
               android:textAlignment="center"
               ></EditText>




           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/phoneNoEdtext"
               android:layout_marginTop="25dp"
               android:textSize="25sp"
               android:textAlignment="center"
android:hint="Phone No"
               ></EditText>
           <Button
               android:layout_marginTop="50dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/connect"
               android:layout_gravity="center"
               android:id="@+id/button_login_connect"
               ></Button>


       </LinearLayout>



    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</LinearLayout>